feat(STOCK-11) minor changes